--- a/stickman_game/css/style.css
+++ b/stickman_game/css/style.css
@@ -3,37 +3,56 @@ body {
     color: whitesmoke;
 }
 
-h1 {
-    display: flex;
-    justify-content: center;
-}
-
-div.gameBox {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    line-height: 500px;
-    border-style: dashed;
+.grid-container {
+    border-style: solid;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 100px 700px 250px;
+    grid-gap: 10px;
+    align-items: stretch;
+    height: 100vh;
+    justify-items: stretch;
     
 }
 
-div.stickman {
-    display: flex;
+.grid-item {
+    border-style: dashed;
+
+}
+
+.grid-item-1 {
     justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.grid-item-2 {
+    justify-self: center;
+}
+
+.grid-item-3 {
+    justify-self: center;
+    text-align: center;
+}
+
+.stickman {
+    border-style: dotted;
 }
 
 img {
-    display: flex;
-    justify-items: center;
     position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    text-align: center;
 }
 
-h6 {
-    color:slategray;
-}
 
-.word {
+div.words {
     display: flex;
     flex-direction: row;
-    align-items: flex-end;
+    border-style: dotted;
+    justify-content: center;
+    align-self: center;
 }
